macros/src/orchestrator/parser/tests/snapshots/macros__orchestrator__parser__tests__atomic_single_task.snap
---
source: macros/src/orchestrator/parser/tests/mod.rs
expression: ast
---
SyntaxTree {
    graphs: [
        Graph {
            entry: Declaration(
                Task {
                    var: Some(
                        "a",
                    ),
                    typ: "TaskA",
                },
            ),
            conns: [],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
    ],
}
