macros/src/orchestrator/parser/tests/snapshots/macros__orchestrator__parser__tests__complex_graph.snap
---
source: macros/src/orchestrator/parser/tests/mod.rs
expression: ast
---
SyntaxTree {
    graphs: [
        Graph {
            entry: Declaration(
                Task {
                    var: Some(
                        "enter",
                    ),
                    typ: "Entering",
                },
            ),
            conns: [
                Declaration(
                    Task {
                        var: Some(
                            "inited",
                        ),
                        typ: "InitScene",
                    },
                ),
            ],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
        Graph {
            entry: Binding(
                Ident(
                    inited,
                ),
            ),
            conns: [
                Group(
                    GroupBlock {
                        mode: Parallel,
                        graphs: [
                            Graph {
                                entry: Declaration(
                                    Task {
                                        var: None,
                                        typ: "A",
                                    },
                                ),
                                conns: [],
                                span_info: SpanInfo {
                                    span: Span,
                                    at_call_site: false,
                                },
                            },
                            Graph {
                                entry: Declaration(
                                    Task {
                                        var: None,
                                        typ: "B",
                                    },
                                ),
                                conns: [],
                                span_info: SpanInfo {
                                    span: Span,
                                    at_call_site: false,
                                },
                            },
                            Graph {
                                entry: Declaration(
                                    Task {
                                        var: None,
                                        typ: "C",
                                    },
                                ),
                                conns: [],
                                span_info: SpanInfo {
                                    span: Span,
                                    at_call_site: false,
                                },
                            },
                        ],
                        span_info: SpanInfo {
                            span: Span,
                            at_call_site: false,
                        },
                    },
                ),
                Declaration(
                    Task {
                        var: Some(
                            "exit",
                        ),
                        typ: "Exiting",
                    },
                ),
            ],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
    ],
}
